<resources>
    <string name="app_name">DoNotDisturb</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="start_date">Sun, 01 Jan 2019</string>
    <string name="start_time">12:00 AM</string>
    <string name="end_date">Sun, 01 Jan 2019</string>
    <string name="end_time">01:00 AM</string>
    <string name="event">Event</string>
    <string name="save">Save</string>
    <string name="close">close</string>
    <string name="no_events">No Events</string>
</resources>
