<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.AddEventFragment">
    <Button
            android:text="@string/start_date"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="KeyboardInaccessibleWidget" app:layout_constraintVertical_bias="0.481"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/start_time"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_time"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/end_time" android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/event_start"
                                            tools:ignore="KeyboardInaccessibleWidget"
                                            app:constraint_referenced_ids="start_date,start_time"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="236dp"
                                                android:orientation="horizontal"
                                                app:layout_constraintTop_toTopOf="parent"
                                                android:layout_marginTop="108dp"/>
    <Button
            android:text="@string/end_date"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_date"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6" app:layout_constraintVertical_bias="0.0"
    />
    <Button
            android:text="@string/end_time"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_time"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0"/>
    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/event_end"
                                            app:constraint_referenced_ids="end_date,end_time"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2" app:layout_constraintGuide_begin="183dp"
                                                android:orientation="horizontal"
                                                app:layout_constraintTop_toTopOf="parent"
                                                android:layout_marginTop="140dp"/>
    <ImageView
            android:src="@drawable/ic_access_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eventlogo"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/event_title"
            android:contentDescription="@string/event"/>
    <TextView
            android:text="@string/event"
            style="@style/DNDEventTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_item_title"
            android:textAppearance="@style/Base.Widget.AppCompat.Button.Borderless"
            app:layout_constraintStart_toEndOf="@+id/eventlogo"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.025" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/event_title"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="2sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/save"
            android:backgroundTint="#1976D2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventSaveButton"
            android:elevation="3sp"
            android:id="@+id/save" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar" android:layout_marginBottom="16dp"/>
    <ImageButton
            style="button"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_close"
            android:elevation="3sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/close" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/save"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/close"

    />
    <EditText android:layout_width="0dp" android:layout_height="wrap_content"
              android:hint="@string/title"
              android:maxLength="50"
              android:inputType="text"
              style="@style/FullWidthEditText"
              android:id="@+id/event_title"
              app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            style="@style/FullWidthEditText"
            android:hint="@string/note"
            android:id="@+id/note"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/noteicon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.027"
            android:maxLines="15"
            android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <ImageView
            android:src="@drawable/ic_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noteicon"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/note" android:layout_marginTop="24dp"
            android:contentDescription="@string/note"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline6" app:layout_constraintGuide_begin="291dp"
                                                android:orientation="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>